# o3d3xx-h5

./: CMakeLists.txt  ChangeLog.md  README.md  package.xml  setup.py
doc/: o3d3xx.h5
doc/.ipynb_checkpoints/: o3d3xx-h5 - Python-checkpoint.ipynb
launch/: h5writer.launch
src/o3d3xx_h5/: _H5Writer.py  __init__.py
