<?xml version="1.0"?>
<package>

  <name>o3d3xx_h5</name>
  <version>0.1.0</version>
  <description>O3D3xx ToF camera data management using HDF5</description>
  <maintainer email="tom@loveparkrobotics.com">Tom Panzarella</maintainer>
  <license>Apache 2</license>
  <author email="tom@loveparkrobotics.com">Tom Panzarella</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>o3d3xx</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>o3d3xx</run_depend>

</package>
